<resources>
  <string name="app_name">BAZZ Movies</string>
  <string name="join_tmdb">Don\'t Have Account? Join TMDB</string>
  <string name="login">Login</string>
  <string name="text_login">text login</string>
  <string name="button_login">button login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="hide_unhide_password">hide or show password</string>
  <string name="please_enter_a_password">Please enter a password</string>
  <string name="please_enter_a_username">Please enter a username</string>
  <string name="bazz">BAZZ Movies</string>
  <string name="guest_session"><u>Guest Session</u></string>
  <string name="poster">Poster</string>
  <string name="retry">Retry</string>
  <string name="no_connection">No internet connection</string>
  <string name="unknown_error">Unknown error</string>

  <string name="login_as_guest_successful">Login as Guest Successful</string>
  <string name="login_successful">Login Successful</string>

  <string name="title_activity">BAZZ Movies</string>
  <string name="title_home">Home</string>
  <string name="title_search">Search</string>
  <string name="title_my_favorite">My Favorite</string>
  <string name="title_more">More</string>
  <string name="title_my_watchlist">My Watchlist</string>
  <string name="tab_layout_explanation">change to featured, movie, or tv-series</string>

  <!-- FEATURED -->
  <string name="movies">Movies</string>
  <string name="tv_series">TV Series</string>
  <string name="person">Person</string>
  <string name="multi_search">Multi Search</string>
  <string name="trending_now">Trending now</string>
  <string name="today">Today</string>
  <string name="this_week">This Week</string>
  <string name="featured">Featured</string>
  <string name="upcoming_movies">Upcoming Movies</string>
  <string name="popular">Popular</string>
  <string name="top_rated">Top Rated</string>
  <string name="now_playing">Now Playing</string>
  <string name="upcoming">Upcoming</string>
  <string name="airing_today">Airing Today</string>
  <string name="playing_now_on_theater">Playing now on Theater</string>
  <string name="on_tv">On Tv</string>
  <string name="no_upcoming_movie">No Upcoming Movie in %1$s \n Please Consider Change Different Country</string>
  <string name="no_movie_currently_playing">No Movie Currently Playing in %1$s \n Please Consider Change Different Country</string>

  <!-- MORE -->
  <string name="guest_user">Guest User</string>
  <string name="image_profile">Image Profile</string>
  <string name="dark_mode">Dark Mode</string>
  <string name="rate_us">Rate us on PlayStore</string>
  <string name="rate_bazz_movies_on_play_store">rate BAZZ Movies on play store</string>
  <string name="faq">FAQ</string>
  <string name="suggestion">Suggestion</string>
  <string name="open_suggestion">open suggestion</string>
  <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
  <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
  <string name="sign_out">Sign Out</string>
  <string name="sign_out_success">Sign Out Success</string>
  <string name="feature_not_ready">Feature still on Development</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="warning">Warning</string>
  <string name="all_data_deleted">Sign Out success, all data has been deleted</string>
  <string name="warning_signOut_guest_mode">Beware, you\'re login as guest mode. All data included favorite and watchlist will be deleted if you sign out, continue??</string>
  <string name="select_region">Select Region</string>
  <string name="open_help">open help</string>
  <string name="open_about_us">open about us</string>
  <string name="about">About</string>
  <string name="about_text">I\'m the sole developer behind the BAZZ Movies app that transforms how you manage your movie collection. Driven by my passion for movies and technology, I embarked on a journey to create an intuitive solution for fellow cinephiles. With my app, you can effortlessly organize, discover, and enjoy your favorite films anytime, anywhere. Join me on this cinematic adventure, and let\'s elevate your movie experience together!</string>
  <string name="tmdb_endorse">Important, BAZZ Movies uses the TMDB API but not endorsed or certified by TMDB.</string>
  <string name="change_language">change language</string>
  <string name="language">Language</string>

  <string name="clear_query">Clear query</string>
  <string name="search_any">Search any Movies</string>
  <string name="explore_our_libraries">Explore TMDB libraries and start typing \n a movie, series or actor as you like</string>
  <string name="sorry_no_result">Sorry no result!</string>
  <string name="no_result_explanation">We cannot find item you are searching for,\nmaybe a little mistake?</string>
  <string name="search_illustration">search illustration</string>

  <string name="data">Data</string>
  <string name="no_data_illustration">no data illustration</string>
  <string name="no_data_found">No data found!</string>
  <string name="no_data_explanation">We cannot find data you are looking for,\nmaybe add favorite or watchlist first</string>

  <string name="back">Back</string>

  <!-- DETAIL MOVIE/TV -->
  <string name="yt_not_installed">Youtube App Not Installed</string>
  <string name="backdrop_not_found">*Official backdrop has not been released yet</string>
  <string name="_divider">|</string>
  <string name="overview">Overview</string>
  <string name="no_overview">Theres no overview translated in English</string>
  <string name="watch_trailer">Watch Trailer</string>
  <string name="cast">Cast</string>
  <string name="as">as</string>
  <string name="recommendation">Recommendation</string>
  <string name="rating">Rating</string>
  <string name="cancel">Cancel</string>
  <string name="submit">Submit</string>
  <string name="your_score">Your Score</string>
  <string name="your_rating">Your rating:</string>
  <string name="not_available">N/A</string>
  <string name="not_available_full">Not Available</string>
  <string name="cant_provide_a_score">Sorry we can\'t provide a score or it hasn\'t been rated yet</string>
  <string name="metascore">Metascore</string>
  <string name="imdb">IMDB</string>
  <string name="tmdb">TMDB</string>
  <string name="tmdb_full">The Movie Database</string>
  <string name="status_">Status : %1$s</string>

  <!-- FAVORITE/WATCHLIST -->
  <string name="undo">Undo</string>
  <string name="already_watchlist">already in watchlist</string>
  <string name="already_favorite">already in favorite</string>
  <string name="added_to_favorite">has been added to favorite</string>
  <string name="added_to_watchlist">has been added to watchlist</string>
  <string name="deleted_from_favorite">has been deleted from favorite</string>
  <string name="deleted_from_favorite2">Item has been deleted from favorite</string>
  <string name="deleted_from_watchlist">has been deleted from watchlist</string>
  <string name="deleted_from_watchlist2">Item has been deleted from watchlist</string>
  <string name="action_not_successful">Action not successful</string>

  <string name="no_data">No Data</string>
  <string name="add_to_favorite">add to favorite</string>
  <string name="add_to_watchlist">add to watchlist</string>

  <string name="picture">Picture</string>
  <string name="forget_password">Forget Password</string>
  <string name="nan">NaN</string>

  <!-- PERSON -->
  <string name="known_for">Known For</string>
  <string name="biography">Biography</string>
  <string name="born">Born</string>
  <string name="day_of_death">Day of Death</string>
  <string name="years_old">years old</string>
  <string name="photos">Photos</string>
  <string name="read_more">Read More</string>
  <string name="less_more">Less More</string>
  <string name="playing_as">Playing as</string>
  <string name="no_biography">No biography</string>
  <string name="actress_photo">actress photo</string>

  <string name="close">close</string>

  <!-- Bottom sheet search, sort, filter -->
  <string name="sort_filter">Sort &amp; Filter</string>
  <string name="type_search">Search by</string>
  <string name="filter_by_genre">Filter by genre</string>
  <string name="action">action</string>
  <string name="adventure">adventure</string>
  <string name="animation">animation</string>
  <string name="comedy">comedy</string>
  <string name="crime">crime</string>
  <string name="documentary">documentary</string>
  <string name="drama">drama</string>
  <string name="family">family</string>
  <string name="fantasy">fantasy</string>
  <string name="history">history</string>
  <string name="horror">horror</string>
  <string name="music">music</string>
  <string name="mystery">mystery</string>
  <string name="romance">romance</string>
  <string name="science_fiction">sci-fi</string>
  <string name="thriller">thriller</string>
  <string name="tv_movie">tv movie</string>
  <string name="war">war</string>
  <string name="western">western</string>
  <string name="reset">Reset</string>
  <string name="apply">Apply</string>
  <string name="maximum_selected_genres_reached">Maximum selected genres reached</string>
  <string name="kids">kids</string>
  <string name="mistery">mistery</string>
  <string name="news">news</string>
  <string name="reality">reality</string>
  <string name="soap">soap</string>
  <string name="talk">talk</string>
  <string name="war_politic"><![CDATA[war & politic]]></string>
  <string name="action_n_adventure"><![CDATA[action & adventure]]></string>
  <string name="sci_fi_n_fantasy"><![CDATA[sci-fi & fantasy]]></string>
  <string name="open_actor_actress_instagram_page">open actor/actress Instagram page</string>
  <string name="open_actor_x_account">open actor/actress X account</string>
  <string name="open_actor_actress_facebook_page">open actor/actress Facebook page</string>
  <string name="open_actor_actress_tiktok_page">open actor/actress Tik Tok page</string>
  <string name="open_actor_actress_imdb_page">open actor/actress IMDb page</string>
  <string name="open_actor_actress_youtube_channel">open actor/actress youtube channel</string>
  <string name="open_actor_actress_wikidata_page">open actor/actress Wikidata page</string>
  <string name="open_actor_actress_home_page">open actor/actress home page</string>
  <string name="binding_error">Binding should not be accessed before onCreateView() or after onDestroyView()</string>
  <string name="tab_selection">tab selection</string>


</resources>