<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/bottom_sheet_parent"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:background="@color/gray_700"
  tools:context=".ui.activity.search.BottomSheetSearchFragment">

  <LinearLayout
    android:id="@+id/standard_bottom_sheet"
    style="@style/Widget.Material3.BottomSheet.Modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/yellow_white"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingBottom="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
      android:id="@+id/dragHandle"
      style="@style/Widget.Material3.BottomSheet.DragHandle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:id="@+id/label_title"
      style="@style/TextHeader2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/sort_filter"
      android:textAppearance="?textAppearanceTitleLarge"
      android:textColor="@color/gray_900" />

    <TextView
      android:id="@+id/label_type_search"
      style="@style/TextHeader2"
      android:layout_marginBottom="4dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/type_search"
      android:textAppearance="?textAppearanceLabelLarge"
      android:textColor="@color/gray_900" />

    <HorizontalScrollView
      android:id="@+id/layoutSorts"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/label_type_search">

      <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_sort_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:selectionRequired="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
          android:id="@+id/multi_types"
          style="@style/MyChip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/multi_search"
          app:chipIconTint="@color/gray_800"
          tools:checked="true" />

        <com.google.android.material.chip.Chip
          android:id="@+id/movie_types"
          style="@style/MyChip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/movies" />

        <com.google.android.material.chip.Chip
          android:id="@+id/tv_types"
          style="@style/MyChip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tv_series" />

        <com.google.android.material.chip.Chip
          android:id="@+id/person_types"
          style="@style/MyChip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/person" />

      </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
      android:id="@+id/sortDivider"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp" />

    <TextView
      android:id="@+id/label_filter_by_genre"
      style="@style/TextHeader2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp"
      android:layout_marginTop="16dp"
      android:text="@string/filter_by_genre"
      android:textAppearance="?textAppearanceLabelLarge"
      android:textColor="@color/black" />

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/cg_genre"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:chipSpacingVertical="0dp"
      app:selectionRequired="false"
      app:singleSelection="false">

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_action"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        tools:checked="true" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_adventure"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adventure" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_animation"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animation" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_comedy"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comedy" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_crime"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_documentary"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/documentary" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_drama"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drama" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_family"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_fantasy"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fantasy" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_history"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_horror"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horror" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_music"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_mystery"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mystery" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_romance"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/romance" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_scifi"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/science_fiction" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_thriller"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thriller" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_tvMovie"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_movie" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_war"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/war" />

      <com.google.android.material.chip.Chip
        android:id="@+id/chip_western"
        style="@style/MyChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/western" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.divider.MaterialDivider
      android:id="@+id/dividerFilter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp" />

    <LinearLayout
      android:layout_marginTop="16dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <FrameLayout
        android:id="@+id/btn_reset_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.google.android.material.button.MaterialButton
          android:id="@+id/btnResetAll"
          style="@style/MyResetButton"
          android:text="@string/reset"
          app:strokeColor="@color/gray_900" />

      </FrameLayout>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        style="@style/MyApplyButton"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frameLayout"
        app:layout_constraintTop_toBottomOf="@id/dividerFilter" />

    </LinearLayout>


  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>