<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraint_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.LoginActivity">

  <ImageView
    android:id="@+id/img_poster"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:background="@color/black"
    android:contentDescription="@string/poster"
    android:src="@drawable/bg_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/img_bazz_logo"
    android:layout_width="44dp"
    android:layout_height="44dp"
    android:layout_marginStart="@dimen/default_margin_parent_20"
    android:layout_marginTop="@dimen/default_margin_parent_20"
    android:contentDescription="@string/bazz"
    android:src="@drawable/ic_bazz_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:fontFamily="@font/exo_bold_italic"
    android:text="@string/bazz"
    android:textColor="@color/white"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/img_bazz_logo"
    app:layout_constraintStart_toEndOf="@+id/img_bazz_logo"
    app:layout_constraintTop_toTopOf="@+id/img_bazz_logo" />

  <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/default_margin_parent_20"
    android:layout_marginBottom="16dp"
    android:contentDescription="@string/text_login"
    android:fontFamily="@font/nunito_sans_bold"
    android:text="@string/login"
    android:textColor="@color/white"
    android:textSize="40sp"
    app:layout_constraintBottom_toTopOf="@+id/ed_username"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/tv_forget_password"
    style="@style/MyTransparentButton"
    android:layout_marginEnd="4dp"
    android:text="@string/forget_password"
    app:layout_constraintBottom_toBottomOf="@+id/img_bazz_logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/img_bazz_logo" />

  <EditText
    android:id="@+id/ed_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margin_parent_20"
    android:layout_marginBottom="8dp"
    android:autofillHints="username"
    android:fontFamily="@font/nunito_sans_regular"
    android:hint="@string/username"
    android:inputType="text"
    android:minHeight="48dp"
    android:textColor="@color/white"
    android:textColorHint="@color/gray_400"
    android:textColorLink="@color/white"
    android:textCursorDrawable="@drawable/cursor_color"
    app:layout_constraintBottom_toTopOf="@+id/ed_pass"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@+id/textView"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <EditText
    android:id="@+id/ed_pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margin_parent_20"
    android:layout_marginBottom="12dp"
    android:autofillHints="password"
    android:fontFamily="@font/nunito_sans_regular"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColor="@color/white"
    android:textColorHint="@color/gray_400"
    android:textColorLink="@color/white"
    android:textCursorDrawable="@drawable/cursor_color"
    app:layout_constraintBottom_toTopOf="@+id/btn_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textView"
    tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

  <ImageView
    android:id="@+id/btn_eye"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginTop="-4dp"
    android:layout_marginEnd="@dimen/default_margin_parent_20"
    android:adjustViewBounds="true"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/hide_unhide_password"
    android:padding="8dp"
    android:scaleType="fitCenter"
    android:src="@drawable/ic_eye_off"
    app:layout_constraintBottom_toBottomOf="@+id/ed_pass"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/ed_pass" />

  <Button
    android:id="@+id/btn_login"
    style="@style/MyLoginButtonPortrait"
    android:layout_marginHorizontal="@dimen/default_margin_parent_20"
    android:contentDescription="@string/button_login"
    android:text="@string/login"
    app:layout_constraintBottom_toTopOf="@+id/tv_guest"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <Button
    android:id="@+id/tv_guest"
    style="@style/MyTransparentButton"
    android:layout_marginBottom="20dp"
    android:text="@string/guest_session"
    app:layout_constraintBottom_toTopOf="@+id/tv_joinTMDB"
    app:layout_constraintEnd_toEndOf="@+id/btn_login"
    app:layout_constraintStart_toStartOf="@+id/btn_login" />

  <Button
    android:id="@+id/tv_joinTMDB"
    style="@style/MyTransparentButton"
    android:layout_marginBottom="32dp"
    android:gravity="center"
    android:text="@string/join_tmdb"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <include
    android:id="@+id/layout_background"
    layout="@layout/background_alpha" />

  <ProgressBar
    android:id="@+id/progress_bar"
    style="@style/MyProgressBar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>