<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/container_search"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/iv_search_illustration"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/search_illustration"
    android:src="@drawable/ic_ill_search" />

  <TextView
    android:id="@+id/tv_search_any_movies"
    style="@style/TextHeader1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin_parent_20"
    android:text="@string/search_any"
    android:textAlignment="center" />

  <TextView
    android:id="@+id/tv_explore_tmdb"
    style="@style/TextDivider"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/explore_our_libraries" />

</LinearLayout>