<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_home">

  <fragment
    android:id="@+id/navigation_home"
    android:name="com.waffiq.bazz_movies.ui.activity.home.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/navigation_search"
    android:name="com.waffiq.bazz_movies.ui.activity.search.SearchFragment"
    android:label="@string/title_search"
    tools:layout="@layout/fragment_search" />

  <fragment
    android:id="@+id/navigation_my_folder"
    android:name="com.waffiq.bazz_movies.ui.activity.myfolder.MyFolderFragment"
    android:label="@string/title_my_folder"
    tools:layout="@layout/fragment_my_folder" />

  <fragment
    android:id="@+id/navigation_more"
    android:name="com.waffiq.bazz_movies.ui.activity.more.MoreFragment"
    android:label="@string/title_more"
    tools:layout="@layout/fragment_my_folder" />
</navigation>